Account scraping implemented

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "My Firefly III OAuth2 Extension",
+  "name": "SunLife RRSP -> Firefly III",
   "version": "1.0",
-  "description": "Description goes here",
+  "description": "Scrapes account and transaction data from Sun Life RRSP (Canada) into Firefly III",
   "permissions": [
     "storage",
     "tabs"
@@ -15,24 +15,27 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.example.com/*"],
+      "matches": ["https://www.sunnet.sunlife.com/mbrportal/req/secure/pphp/personalizedWelcome"],
       "js": ["./dist/auto.js"]
     },
     {
-      "matches": ["https://*.example.com/*"],
+      "matches": ["https://www.sunnet.sunlife.com/mbrportal/req/secure/pphp/personalizedWelcome"],
       "js": ["./dist/accounts.js"]
     },
     {
-      "matches": ["https://*.example.com/*"],
+      "matches": ["https://www.sunnet.sunlife.com/mbrportal/req/secure/pphp/personalizedWelcome"],
       "js": ["./dist/transactions.js"]
     },
     {
-      "matches": ["https://*.example.com/*"],
+      "matches": ["https://www.sunnet.sunlife.com/mbrportal/req/secure/pphp/personalizedWelcome"],
       "js": ["./dist/opening.js"]
     }
   ],
   "action": {
     "default_popup": "options.html"
   },
-  "manifest_version": 3
+  "manifest_version": 3,
+  "icons": {
+    "128": "logo-128.png"
+  }
 }
