Update from upstream

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
   "version": "1.0",
   "description": "Scrapes account and transaction data from Sun Life RRSP (Canada) into Firefly III",
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
   ],
   "externally_connectable": {
     "ids": [
